Bug 202643 - Crash when load user's create playlist without name
Summary: Crash when load user's create playlist without name
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Playlists/Saved Playlists (show other bugs)
Version: 2.3-GIT
Platform: Unlisted Binaries Linux
: HI crash
Target Milestone: ---
Assignee: Amarok Developers
URL:
Keywords:
: 204296 219812 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-08-05 15:50 UTC by Mike
Modified: 2009-12-23 13:23 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments
Image show bug (28.83 KB, image/png)
2009-08-05 15:54 UTC, Mike
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike 2009-08-05 15:50:52 UTC
Version:           amarok-2.2-git (using KDE 4.3.0)
Compiler:          gcc (GCC) 4.4.0 20090708  
OS:                Linux
Installed from:    Unspecified Linux

Step to reproduce:
1. Open "Home -> Playlists -> User Playlists"
You see "Add Folder" button.
2. Click on "Add Folder" button, press Enter - you create playlist folder without name.
3. Click right mouse button on folder without name and select "Load".
4. Crash

Amarok build from git, commit: a55e0c035e636eb4dc0018c110e666d605812c0c
Use external mysql server.
Comment 1 Mike 2009-08-05 15:54:52 UTC
Created attachment 35866 [details]
Image show bug
Comment 2 Mikko C. 2009-08-05 16:12:21 UTC
Confirmed here.
Backtrace:

Thread 1 (Thread 0x7fe487f3d760 (LWP 5699)):
[KCrash Handler]
#5  0x00007fe4858cd1e5 in raise () from /lib/libc.so.6
#6  0x00007fe4858ce703 in abort () from /lib/libc.so.6
#7  0x00007fe485c440e5 in qt_message_output (msgType=QtFatalMsg, buf=<value optimized out>) at global/qglobal.cpp:2042
#8  0x00007fe485c44200 in qFatal (msg=<value optimized out>) at global/qglobal.cpp:2241
#9  0x00007fe4871672da in KSharedPtr<Meta::Playlist>::operator-> (this=0x7fffa3820d10) at /usr/include/ksharedptr.h:126
#10 0x00007fe4872851b8 in PlaylistBrowserNS::UserModel::slotLoad (this=0x3af8950) at /home/mikko/amarok/src/browsers/playlistbrowser/UserPlaylistModel.cpp:570
#11 0x00007fe4872874b2 in PlaylistBrowserNS::UserModel::qt_metacall (this=0x3af8950, _c=QMetaObject::InvokeMetaMethod, _id=2, _a=0x7fffa3820ee0)
    at /home/mikko/amarok/build/src/UserPlaylistModel.moc:86
#12 0x00007fe485d43525 in QMetaObject::activate (sender=0x7fe458bea4e0, from_signal_index=<value optimized out>, to_signal_index=6, argv=0xffffffffffffffff) at kernel/qobject.cpp:3101
#13 0x00007fe486604e17 in QAction::triggered (this=0x1643, _t1=false) at .moc/debug-shared/moc_qaction.cpp:236
#14 0x00007fe486605bc0 in QAction::activate (this=0x7fe458bea4e0, event=<value optimized out>) at kernel/qaction.cpp:1160
#15 0x00007fe4869ced9c in QMenuPrivate::activateCausedStack (this=0x6196bd0, causedStack=@0x7fffa3821000, action=0x7fe458bea4e0, action_e=QAction::Trigger, self=true) at widgets/qmenu.cpp:967
#16 0x00007fe4869d533b in QMenuPrivate::activateAction (this=0x6196bd0, action=0x7fe458bea4e0, action_e=2743220080, self=true) at widgets/qmenu.cpp:1060
#17 0x00007fe4879f83a5 in KMenu::mouseReleaseEvent (this=0x7fffa3823770, e=0x7fffa3821b60) at /var/tmp/paludis/kde-base-kdelibs-4.3.9999/work/kdelibs-4.3.9999/kdeui/widgets/kmenu.cpp:456
#18 0x00007fe48665dd40 in QWidget::event (this=0x7fffa3823770, event=0x7fffa3821b60) at kernel/qwidget.cpp:7549
#19 0x00007fe4869d65cb in QMenu::event (this=0x7fffa3823770, e=0x7fffa3821b60) at widgets/qmenu.cpp:2353
#20 0x00007fe48660a88d in QApplicationPrivate::notify_helper (this=0x1fb1ad0, receiver=0x7fffa3823770, e=0x7fffa3821b60) at kernel/qapplication.cpp:4056
#21 0x00007fe486613d0b in QApplication::notify (this=<value optimized out>, receiver=0x7fffa3823770, e=0x7fffa3821b60) at kernel/qapplication.cpp:3758
#22 0x00007fe48793bc51 in KApplication::notify (this=0x7fffa3826150, receiver=0x7fffa3823770, event=0x7fffa3821b60)
    at /var/tmp/paludis/kde-base-kdelibs-4.3.9999/work/kdelibs-4.3.9999/kdeui/kernel/kapplication.cpp:302
#23 0x00007fe485d2dcdb in QCoreApplication::notifyInternal (this=0x7fffa3826150, receiver=0x7fffa3823770, event=0x7fffa3821b60) at kernel/qcoreapplication.cpp:606
#24 0x00007fe486612e82 in QApplicationPrivate::sendMouseEvent (receiver=0x7fffa3823770, event=0x7fffa3821b60, alienWidget=0x0, nativeWidget=0x7fffa3823770, buttonDown=<value optimized out>, 
    lastMouseReceiver=@0x7fe486f97f50) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:216
#25 0x00007fe48667482b in QETWidget::translateMouseEvent (this=0x7fffa3823770, event=<value optimized out>) at kernel/qapplication_x11.cpp:4338
#26 0x00007fe486673155 in QApplication::x11ProcessEvent (this=0x7fffa3826150, event=0x7fffa3823550) at kernel/qapplication_x11.cpp:3545
#27 0x00007fe486698e7e in QEventDispatcherX11::processEvents (this=0x1ee2710, flags={i = -1551747472}) at kernel/qeventdispatcher_x11.cpp:132
#28 0x00007fe485d2c922 in QEventLoop::processEvents (this=<value optimized out>, flags={i = -1551747424}) at kernel/qeventloop.cpp:149
#29 0x00007fe485d2cabc in QEventLoop::exec (this=0x7fffa38236e0, flags={i = -1551747328}) at kernel/qeventloop.cpp:197
#30 0x00007fe4869d6447 in QMenu::exec (this=<value optimized out>, p=@0x7fffa38237f0, action=0x0) at widgets/qmenu.cpp:1993
#31 0x00007fe48728a52b in PlaylistBrowserNS::UserPlaylistTreeView::contextMenuEvent (this=0x3af8c40, event=0x7fffa3824530)
    at /home/mikko/amarok/src/browsers/playlistbrowser/UserPlaylistTreeView.cpp:195
#32 0x00007fe48665e086 in QWidget::event (this=0x3af8c40, event=0x7fffa3824530) at kernel/qwidget.cpp:7708
#33 0x00007fe48699487b in QFrame::event (this=0x3af8c40, e=0x7fffa3824530) at widgets/qframe.cpp:559
#34 0x00007fe486ab5b8d in QAbstractItemView::viewportEvent (this=0x3af8c40, event=0x7fffa3824530) at itemviews/qabstractitemview.cpp:1476
#35 0x00007fe486af03e2 in QTreeView::viewportEvent (this=0x3af8c40, event=0x7fffa3824530) at itemviews/qtreeview.cpp:1266
#36 0x00007fe485d2d777 in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=<value optimized out>, receiver=0x3af2a50, event=0x7fffa3824530) at kernel/qcoreapplication.cpp:726
#37 0x00007fe48660a85c in QApplicationPrivate::notify_helper (this=0x1fb1ad0, receiver=0x3af2a50, e=0x7fffa3824530) at kernel/qapplication.cpp:4052
#38 0x00007fe486614296 in QApplication::notify (this=<value optimized out>, receiver=0x3af2a50, e=0x7fffa3824530) at kernel/qapplication.cpp:3845
#39 0x00007fe48793bc51 in KApplication::notify (this=0x7fffa3826150, receiver=0x3af2a50, event=0x7fffa3824530)
    at /var/tmp/paludis/kde-base-kdelibs-4.3.9999/work/kdelibs-4.3.9999/kdeui/kernel/kapplication.cpp:302
#40 0x00007fe485d2dcdb in QCoreApplication::notifyInternal (this=0x7fffa3826150, receiver=0x3af2a50, event=0x7fffa3824530) at kernel/qcoreapplication.cpp:606
#41 0x00007fe486674ccd in QETWidget::translateMouseEvent (this=0x2062a20, event=<value optimized out>) at kernel/qapplication_x11.cpp:4410
#42 0x00007fe486673155 in QApplication::x11ProcessEvent (this=0x7fffa3826150, event=0x7fffa3825f50) at kernel/qapplication_x11.cpp:3545
#43 0x00007fe486698e7e in QEventDispatcherX11::processEvents (this=0x1ee2710, flags={i = -1551736720}) at kernel/qeventdispatcher_x11.cpp:132
#44 0x00007fe485d2c922 in QEventLoop::processEvents (this=<value optimized out>, flags={i = -1551736672}) at kernel/qeventloop.cpp:149
#45 0x00007fe485d2cabc in QEventLoop::exec (this=0x7fffa38260e0, flags={i = -1551736592}) at kernel/qeventloop.cpp:197
#46 0x00007fe485d3161e in QCoreApplication::exec () at kernel/qcoreapplication.cpp:888
#47 0x00000000004037c5 in main (argc=3, argv=0x7fffa3827358) at /home/mikko/amarok/src/main.cpp:128
Comment 3 Myriam Schweingruber 2009-08-09 14:59:49 UTC
Changing priority.
Comment 5 Bart Cerneels 2009-08-20 16:16:05 UTC
*** Bug 204296 has been marked as a duplicate of this bug. ***
Comment 6 Myriam Schweingruber 2009-12-23 13:23:25 UTC
*** Bug 219812 has been marked as a duplicate of this bug. ***