Don't crash when trying to load an empty playlist folder.

BUG: 202643